--- a/plugins/mcMMO/flatfile/parties.yml
+++ b/plugins/mcMMO/flatfile/parties.yml
@@ -2,7 +2,7 @@ Softies:
   Leader: b7d591a6-7fb2-4346-968c-f58d00ea2a4a|SoftNina
   Locked: true
   Level: 10
-  Xp: 1584
+  Xp: 1079
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -20,7 +20,7 @@ Pu$$yRippers:
   Leader: 903bd7f5-b440-4c08-a817-772b6861d1d4|ItzMecha
   Locked: true
   Level: 10
-  Xp: 5400
+  Xp: 3390
   Ally: ''
   ExpShareMode: EQUAL
   ItemShareMode: NONE
@@ -39,7 +39,7 @@ RetiredMC:
   Leader: 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   Locked: true
   Level: 10
-  Xp: 6953
+  Xp: 0
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -56,12 +56,13 @@ RetiredMC:
   - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|End3rduty
   - 2c057e34-fc9d-471b-aee6-c20aecaef9e6|War_Eagle34
   - 58619ad3-29e8-41e6-affa-da663472fcc8|tuellie
+  - d455043e-4198-41e3-aecf-4ee2ac54f68b|CringeMonster
 Jahaven:
   Leader: 23757a5a-ed62-4ef1-8bb6-62de752f3a94|JahTheSequel
   Password: OnJah
   Locked: true
   Level: 10
-  Xp: 1380
+  Xp: 4590
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -75,12 +76,13 @@ Jahaven:
   - 23757a5a-ed62-4ef1-8bb6-62de752f3a94|JahTheSequel
   - 0f1e98ce-7ae8-4cff-b7b3-f1f3025a7c59|El_Mexicano_Hdz
   - 9c831db3-4541-4516-8b38-e76652d6603d|Villhalian
+  - 46d1945c-9e30-4496-b4bb-8716d915e48a|Kasherick
 quasi=gay:
   Leader: 1b40ec65-b03a-419b-85bc-2366be4b08b9|t_troublesome
   Password: lololol
   Locked: true
   Level: 10
-  Xp: 5712
+  Xp: 1350
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
