--- a/plugins/Towny/settings/config.yml
+++ b/plugins/Towny/settings/config.yml
@@ -312,7 +312,7 @@ new_world_settings:
       #
       # If you allow players to break/build in the wild the snapshot will
       # include any changes made before the plot was claimed.
-      enabled: 'true'
+      enabled: 'false'
       speed: 1s
       # These block types will NOT be regenerated
       block_ignore: GOLD_ORE,LAPIS_ORE,LAPIS_BLOCK,GOLD_BLOCK,IRON_BLOCK,MOSSY_COBBLESTONE,TORCH,MOB_SPAWNER,DIAMOND_ORE,DIAMOND_BLOCK,SIGN_POST,WALL_SIGN,GLOWSTONE
