--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -1,8 +1,32 @@
 bossBar:
   Ben_Shapir0: true
+  zNihility: true
+  CringeMonster: true
+  gamaguy27: true
+  Corsair88: true
+  zKirk: true
+  ChromeGraphics: true
+  ItzMecha: true
+  ChickensDying: true
+  RealRewind: true
+  Brigade42nd: true
   loovne: true
+  55Navyboy: true
   JahTheSequel: true
+  Elithegreat567: true
 actionBar:
   Ben_Shapir0: true
+  zNihility: true
+  CringeMonster: true
+  gamaguy27: true
+  Corsair88: true
+  zKirk: true
+  ChromeGraphics: true
+  ItzMecha: true
+  ChickensDying: true
+  RealRewind: true
+  Brigade42nd: true
   loovne: true
+  55Navyboy: true
   JahTheSequel: true
+  Elithegreat567: true
