SF Cargo and Transport fix
Android Memory Cores are a required component for crafting a cargo transportation setup

--- a/plugins/Slimefun/Items.yml
+++ b/plugins/Slimefun/Items.yml
@@ -3033,7 +3033,7 @@ PLASTIC_SHEET:
   allow-disenchanting: true
   required-permission: ''
 ANDROID_MEMORY_CORE:
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
