--- a/plugins/Slimefun/Items.yml
+++ b/plugins/Slimefun/Items.yml
@@ -1236,7 +1236,7 @@ ENDER_MINER_TALISMAN:
   - '&eEnder Talismans have the advantage'
   - '&eof still working while they'
   - '&eare in your Ender Chest'
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
@@ -1256,7 +1256,7 @@ ENDER_HUNTER_TALISMAN:
   - '&eEnder Talismans have the advantage'
   - '&eof still working while they'
   - '&eare in your Ender Chest'
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
@@ -1296,7 +1296,7 @@ ENDER_WATER_TALISMAN:
   - '&eEnder Talismans have the advantage'
   - '&eof still working while they'
   - '&eare in your Ender Chest'
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
@@ -1316,7 +1316,7 @@ ENDER_ANGEL_TALISMAN:
   - '&eEnder Talismans have the advantage'
   - '&eof still working while they'
   - '&eare in your Ender Chest'
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
@@ -2229,7 +2229,7 @@ SEISMIC_AXE:
   required-permission: ''
   wiki: https://github.com/TheBusyBiscuit/Slimefun4/wiki/Seismic-Axe
 PICKAXE_OF_VEIN_MINING:
-  enabled: false
+  enabled: true
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
