--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -7,6 +7,7 @@ bossBar:
   Corsair88: true
   zKirk: true
   ChromeGraphics: true
+  End3rduty: true
   ItzMecha: true
   ChickensDying: true
   RealRewind: true
@@ -26,6 +27,7 @@ actionBar:
   Corsair88: true
   zKirk: true
   ChromeGraphics: true
+  End3rduty: true
   ItzMecha: true
   ChickensDying: true
   RealRewind: true
