--- a/plugins/mcMMO/flatfile/parties.yml
+++ b/plugins/mcMMO/flatfile/parties.yml
@@ -1,20 +1,3 @@
-Softies:
-  Leader: b7d591a6-7fb2-4346-968c-f58d00ea2a4a|SoftNina
-  Locked: true
-  Level: 10
-  Xp: 0
-  Ally: ''
-  ExpShareMode: NONE
-  ItemShareMode: NONE
-  ItemShareType:
-    LOOT: true
-    MINING: true
-    HERBALISM: true
-    WOODCUTTING: true
-    MISC: true
-  Members:
-  - b7d591a6-7fb2-4346-968c-f58d00ea2a4a|SoftNina
-  - d7394801-5961-45b8-9448-fe5d445122bd|k0tu
 Pu$$yRippers:
   Leader: 903bd7f5-b440-4c08-a817-772b6861d1d4|ItzMecha
   Locked: true
@@ -32,14 +15,13 @@ Pu$$yRippers:
   Members:
   - 903bd7f5-b440-4c08-a817-772b6861d1d4|ItzMecha
   - 89808db2-8c04-4212-8038-1e8d605f7b89|zKirk
-  - 6d8a67f0-1cb6-4e79-9b0d-77be763ad047|iGooMo
   - fff2c457-d1ac-43b7-a0bf-4f33305c5d23|SeantasticSean
   - b31408a6-cd46-4b06-a9d3-684906da86e9|glojester
 RetiredMC:
   Leader: 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   Locked: true
   Level: 10
-  Xp: 990
+  Xp: 800
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -51,7 +33,6 @@ RetiredMC:
     MISC: true
   Members:
   - 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
-  - ea42a580-355a-4981-bed2-65dc5fccbeb6|Grepses
   - b6bb0a32-3f3a-4e47-8db1-026a17cc5bbd|ChickensDying
   - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|End3rduty
   - d455043e-4198-41e3-aecf-4ee2ac54f68b|CringeMonster
@@ -60,7 +41,7 @@ Jahaven:
   Password: OnJah
   Locked: true
   Level: 10
-  Xp: 2397
+  Xp: 1600
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -74,21 +55,4 @@ Jahaven:
   - 23757a5a-ed62-4ef1-8bb6-62de752f3a94|JahTheSequel
   - 0f1e98ce-7ae8-4cff-b7b3-f1f3025a7c59|El_Mexicano_Hdz
   - 9c831db3-4541-4516-8b38-e76652d6603d|Villhalian
-  - 46d1945c-9e30-4496-b4bb-8716d915e48a|Kasherick
-quasi=gay:
-  Leader: 1b40ec65-b03a-419b-85bc-2366be4b08b9|t_troublesome
-  Password: lololol
-  Locked: true
-  Level: 10
-  Xp: 2150
-  Ally: ''
-  ExpShareMode: NONE
-  ItemShareMode: NONE
-  ItemShareType:
-    LOOT: true
-    MINING: true
-    HERBALISM: true
-    WOODCUTTING: true
-    MISC: true
-  Members:
-  - 1b40ec65-b03a-419b-85bc-2366be4b08b9|t_troublesome
+  - c547797c-4e89-4c4a-89cd-27312fca919e|Ben_Shapir0
